--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,15 +5,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Agent service (guardrail)",
-      "type": "debugpy",
-      "request": "launch",
-      "module": "aia25.agent_repo.agent_service",
-      "console": "integratedTerminal",
-      "cwd": "${workspaceFolder}",
-      "justMyCode": false
-    },
-    {
       "name": "Chat UI",
       "type": "debugpy",
       "request": "launch",
@@ -22,29 +13,31 @@
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
       "justMyCode": false,
+      "python": "${workspaceFolder}/.venv/bin/python",
 
       // follow the re-spawned process every time the watcher reloads your app
       "subProcess": true,
       "env": {
         "PYTHONPATH": "${workspaceFolder}${pathSeparator}${workspaceFolder}/aia25${pathSeparator}${workspaceFolder}/tools_repo"
       }
-    },
+    }
+    ,
     {
-      "name": "Chat UI - Langfuse",
+      "name": "mlflow UI",
       "type": "debugpy",
       "request": "launch",
-      "module": "chainlit",
-      "args": ["run", "${workspaceFolder}/aia25/app.py", "-w"],
-      "cwd": "${workspaceFolder}",
+      "module": "mlflow",
+      "args": [
+        "ui",
+        "--backend-store-uri",
+        "sqlite:///mlflow.db",
+        "--port",
+        "5001"
+      ],
       "console": "integratedTerminal",
+      "cwd": "${workspaceFolder}",
       "justMyCode": false,
-
-      // follow the re-spawned process every time the watcher reloads your app
-      "subProcess": true,
-      "env": {
-        "PYTHONPATH": "${workspaceFolder}${pathSeparator}${workspaceFolder}/aia25${pathSeparator}${workspaceFolder}/tools_repo",
-        "LANGFUSE_TRACING_ACTIVE": "true"
-      }
+      "python": "${workspaceFolder}/.venv/bin/python"
     }
   ]
 }
